--- a/nvim/.config/nvim/.luarc.json
+++ b/nvim/.config/nvim/.luarc.json
@@ -1,5 +1,14 @@
 {
-    "diagnostics.globals": [
-        "vim"
-    ]
+  "runtime.version": "LuaJIT",
+  "runtime.path": [
+    "lua/?.lua",
+    "lua/?/init.lua"
+  ],
+  "diagnostics.globals": ["vim"],
+  "workspace.checkThirdParty": false,
+  "workspace.library": [
+    "$VIMRUNTIME",
+    "${3rd}/luv/library"
+  ]
 }
+
