--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@ unbind C-b
 set -g prefix C-f
 bind-key C-f send-prefix
 set -g mouse on
+set -g status-position top
 
 unbind '"'
 unbind %
@@ -23,9 +24,8 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'xamut/tmux-weather'
 
 set-option -g @tmux-weather-units "u"
+set-option -g @tmux-weather-location "Salt+Lake+City"
 set -g @catppuccin_status_modules_right "application session weather"
-
-set -g status-position top
 
 run '~/.tmux/plugins/tpm/tpm'
 
