--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ unbind C-b
 set -g prefix C-f
 bind-key C-f send-prefix
 set -g mouse on
-set -g status-position top
+set -g status-position bottom
 
 unbind '"'
 unbind %
