--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -16,6 +16,8 @@ cursor_blink_interval 0
 shell_integration no-cursor
 
 hide_window_decorations yes
+tab_bar_edge top
+tab_bar_style slant
 
 scrollback_lines 10000
 
