--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ unbind C-b
 set -g prefix C-f
 bind-key C-f send-prefix
 set -g mouse on
-set -g status-position bottom
+set -g status-position top
 
 unbind '"'
 unbind %
@@ -16,6 +16,8 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+set-option -g allow-rename off
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
