--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,6 +18,7 @@ shell_integration no-cursor
 hide_window_decorations yes
 tab_bar_edge top
 tab_bar_style slant
+tab_title_max_length 10
 
 scrollback_lines 10000
 
